test/tests/compiler/1_int_constants/invalid_lex/backtick.plx
# A euro sign is not a valid token.
€
